--- a/app/src/main/res/layout/view_poker_card.xml
+++ b/app/src/main/res/layout/view_poker_card.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="@dimen/spacing_20"
-    android:layout_height="@dimen/spacing_25">
+    android:layout_width="@dimen/spacing_10"
+    android:layout_height="@dimen/spacing_15"
+    android:layout_margin="@dimen/spacing_2"
+    app:cardElevation="@dimen/spacing_1_b"
+    app:strokeColor="@color/black"
+    app:strokeWidth="@dimen/spacing_1_b">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,6 +29,7 @@
             android:id="@+id/iv_suits_icon"
             android:layout_width="match_parent"
             android:layout_height="@dimen/spacing_empty"
+            android:layout_marginBottom="@dimen/spacing_1"
             android:layout_weight="1"
             android:src="@drawable/ic_heart" />
     </LinearLayout>
