--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
     <dimen name="spacing_8">32dp</dimen>
     <dimen name="spacing_9">36dp</dimen>
     <dimen name="spacing_10">40dp</dimen>
+    <dimen name="spacing_15">50dp</dimen>
     <dimen name="spacing_20">80dp</dimen>
     <dimen name="spacing_25">100dp</dimen>
 
