--- a/app/src/main/res/layout/view_poker_card.xml
+++ b/app/src/main/res/layout/view_poker_card.xml
@@ -2,9 +2,9 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="@dimen/spacing_10"
-    android:layout_height="@dimen/spacing_15"
-    android:layout_margin="@dimen/spacing_2"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="@dimen/spacing_2"
     app:cardElevation="@dimen/spacing_1_b"
     app:strokeColor="@color/black"
     app:strokeWidth="@dimen/spacing_1_b">
@@ -31,6 +31,6 @@
             android:layout_height="@dimen/spacing_empty"
             android:layout_marginBottom="@dimen/spacing_1"
             android:layout_weight="1"
-            android:src="@drawable/ic_heart" />
+            tools:src="@drawable/ic_heart" />
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
