--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,6 +17,12 @@
     <dimen name="spacing_15">50dp</dimen>
     <dimen name="spacing_20">80dp</dimen>
     <dimen name="spacing_25">100dp</dimen>
+    <dimen name="spacing_30">150dp</dimen>
 
-    <dimen name="text_size_card_number">40sp</dimen>
+
+    <dimen name="text_size_card_number">25sp</dimen>
+    <dimen name="text_size_hint_game">16sp</dimen>
+    <dimen name="text_size_sub_title_game">20sp</dimen>
+
+
 </resources>
